# ui_server

./: .dockerignore  .gitignore  Readme.md  build_get_categories_ui.json  config.yaml  deploy.sh  docker-compose.yml  dynamic_requirements_updater.py  get_receiver_id_by_receiver_phone_number_ui.json  get_suppliers_by_category_ui.json  logs.json  pyproject.toml  pyright-report 2.txt  pyrightconfig.json  requirements.txt  response.json  t.json  test-docker-compose.yml  test.io  test.ipynb  test.json  test.py  testkafka.py  wer_table.ipynb  wer_table.py
_divkit_/: customElement.js  package-lock.json  package.json  t.json
adapters/: base_adapter.py  default_adapter.py  registry.py
conf/: __init__.py  config_models.py  logger_conf.py
configs/: api_keys.json  config.json  configs.json
configuration_manager/: configuration_manager.py
docker/: Dockerfile
functions_to_format/: components.py  dynamic_ui_builder.py  functions.py  html_builder.py  mapper.py  platform_profiles.py
models/: __init__.py  build.py  context.py  widget.py
share/: approve.json
src/: Server_Beta.py  config_router.py  server.py  ui_router.py
telemetry/: ARCHITECTURE.md  METRICS_FLOW.txt  METRICS_PREFIX_CHANGES.md  README.md  __init__.py  decorators.py  examples.py  grafana-dashboard.json  metrics.py  middleware.py  prometheus.yml  setup.py
templates/: balance.py  contact.py  news.py  notification.py  products.html  products.py  test.py  weather.html  weather.py
tests/: api_v2_tests.py  api_v3_tests.py  functions_v3_tests.py  test-on-android.py
utils/: cache.py  deploy_docker.sh  (+5 more)
(+57 files in other folders)
