[project]
name = "ui-server"
version = "1.01"
description = "UI Server to generate UI json representations using Yandex Divkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.121.1",
    "genson>=1.3.0",
    "jsonschema>=4.25.1",
    "logfire>=4.14.2",
    "numpy==2.2.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-exporter-prometheus>=0.59b0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pandas==2.2.3",
    "pipreqs==0.5.0",
    "prometheus-client>=0.23.1",
    "psutil>=6.1.0",
    "pydivkit>=32.25.0",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "sentry-sdk>=2.44.0",
    "smarty-ui",
    "structlog>=25.5.0",
    "tool-call-models==0.1.42",
]

[tool.uv.sources]
smarty-ui = { path = "smarty_ui" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pymongo>=4.15.4",
    "pyright>=1.1.407",
]

